// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildPdfHtml with branding > renders contract without branding (snapshot stability) 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8" />
  <title>Contract CTR-001</title>
  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap" rel="stylesheet" />
  
  <style>
    :root {
    --pdf-doc-title: 32px;
    --pdf-section-heading: 20px;
    --pdf-total: 18px;
    --pdf-subtitle: 15px;
    --pdf-body: 15px;
    --pdf-fine-print: 12px;
    --pdf-section-label: 11px;
    --pdf-doc-title-color: #111827;
    --pdf-section-heading-color: #111827;
    --pdf-total-color: #111827;
    --pdf-subtitle-color: #111827;
    --pdf-section-label-color: #111827;
    --pdf-body-color: #6B7280;
    --pdf-fine-print-color: #6B7280;
    --pdf-border: #E5E7EB;
    --pdf-audit-bg: #F0FDF4;
    --pdf-audit-border: #BBEDD5;
    --pdf-audit-text: #16A34A;
    --pdf-bank-bg: #FAFAFA;
  }
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; padding: 48px; color: #111111; max-width: 720px; margin: 0 auto; line-height: 1.6; }
    h1, h2, h3 { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; color: #111111; }
    h1 { font-size: var(--pdf-doc-title); margin: 24px 0 10px; }
    h2 { font-size: var(--pdf-section-heading); margin: 20px 0 6px; }
    h3 { font-size: var(--pdf-body); margin: 16px 0 4px; }
    p { margin: 6px 0; color: #111111; font-size: var(--pdf-body); }
    ul, ol { margin: 6px 0 6px 22px; color: #111111; font-size: var(--pdf-body); }
    li { margin: 2px 0; }
    li > p { margin: 0; }
    li > p + ul, li > p + ol { margin-top: 2px; }
    @media print { body { padding: 0; } @page { margin: 20mm; } }
  </style>
</head>
<body>
  <div style="display:flex;justify-content:space-between;align-items:flex-start;margin-bottom:36px">
    <div>
      
      <p style="font-size:var(--pdf-subtitle);font-weight:700;color:#111111;margin-bottom:4px;margin-top:0">Amazing MCs Inc</p>
      <p style="font-size:var(--pdf-body);color:#666666">For Smith & Jones</p>
    </div>
    <div style="text-align:right">
      <p style="font-size:var(--pdf-doc-title);font-weight:700;color:#111111">Contract</p>
      <p style="font-size:var(--pdf-body);color:#666666;margin-top:4px">#CTR-001</p>
    </div>
  </div>

  <h1 style="font-size:var(--pdf-doc-title);font-weight:600;margin-bottom:24px">Wedding MC Agreement</h1>

  <div style="color:#111111;font-size:var(--pdf-body)"><p>Test contract content</p></div>

  <div style="margin-top:40px;padding-top:24px;border-top:1px solid var(--pdf-border);display:flex;gap:40px;flex-wrap:wrap">
    <div style="flex:1;min-width:220px">
      <p style="font-size:var(--pdf-fine-print);font-weight:600;color:#666666;text-transform:uppercase;letter-spacing:0.06em;margin-bottom:4px">Signed by MC</p>
      <p style="font-size:var(--pdf-subtitle);font-family:Caveat, 'Brush Script MT', cursive;color:#111111">Amazing MCs Inc</p>
      <p style="font-size:var(--pdf-body);color:#666666;margin-top:4px">Amazing MCs Inc</p>
    </div>
    
  </div>

  
</body>
</html>"
`;

exports[`buildPdfHtml with branding > renders invoice without branding (snapshot stability) 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8" />
  <title>Invoice INV-001</title>
  
  <style>
    :root {
    --pdf-doc-title: 32px;
    --pdf-section-heading: 20px;
    --pdf-total: 18px;
    --pdf-subtitle: 15px;
    --pdf-body: 15px;
    --pdf-fine-print: 12px;
    --pdf-section-label: 11px;
    --pdf-doc-title-color: #111827;
    --pdf-section-heading-color: #111827;
    --pdf-total-color: #111827;
    --pdf-subtitle-color: #111827;
    --pdf-section-label-color: #111827;
    --pdf-body-color: #6B7280;
    --pdf-fine-print-color: #6B7280;
    --pdf-border: #E5E7EB;
    --pdf-audit-bg: #F0FDF4;
    --pdf-audit-border: #BBEDD5;
    --pdf-audit-text: #16A34A;
    --pdf-bank-bg: #FAFAFA;
  }
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; padding: 48px; color: #111111; max-width: 700px; margin: 0 auto; }
    h1, h2, h3, .heading { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; }
    @media print {
      body { padding: 0; }
      @page { margin: 20mm; }
    }
  </style>
</head>
<body>
  <div style="display:flex;justify-content:space-between;align-items:flex-start;margin-bottom:48px">
    <div>
      
      <p class="heading" style="font-size:var(--pdf-subtitle);font-weight:700;color:#111111;margin-bottom:4px">Amazing MCs Inc</p>
      <p style="font-size:var(--pdf-body);color:#666666">Smith & Jones</p>
    </div>
    <div style="text-align:right">
      <p class="heading" style="font-size:var(--pdf-doc-title);font-weight:700;color:#111111;text-transform:capitalize">Invoice</p>
      <p style="font-size:var(--pdf-body);color:#666666;margin-top:4px">#INV-001</p>
      
    </div>
  </div>

  <p class="heading" style="font-size:var(--pdf-section-heading);font-weight:600;color:#111111;margin-bottom:32px">Wedding MC Services</p>

  <table style="width:100%;border-collapse:collapse">
    <thead><tr style="border-bottom:2px solid #111111">
          <th style="padding:8px 0;font-size:var(--pdf-section-label);font-weight:600;color:#666666;text-align:left;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif">Description</th>
          <th style="padding:8px 0;font-size:var(--pdf-section-label);font-weight:600;color:#666666;text-align:right;width:60px;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif">Qty</th>
          <th style="padding:8px 0;font-size:var(--pdf-section-label);font-weight:600;color:#666666;text-align:right;width:100px;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif">Unit price</th>
          <th style="padding:8px 0;font-size:var(--pdf-section-label);font-weight:600;color:#666666;text-align:right;width:100px;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif">Amount</th>
        </tr></thead>
    <tbody>
        <tr>
          <td style="padding:10px 0;border-bottom:1px solid var(--pdf-border);font-size:var(--pdf-body);color:#111111">MC Services</td>
          <td style="padding:10px 0;border-bottom:1px solid var(--pdf-border);font-size:var(--pdf-body);color:#111111;text-align:right;width:120px">$1,000.00</td>
        </tr></tbody>
  </table>

  <div style="margin-top:24px;border-top:2px solid #111111;padding-top:16px">
    <table style="width:100%;border-collapse:collapse;margin-left:auto;max-width:280px">
      <tr>
        <td style="padding:6px 0;font-size:var(--pdf-body);color:#666666">Subtotal</td>
        <td style="padding:6px 0;font-size:var(--pdf-body);color:#111111;text-align:right">$1,000.00</td>
      </tr>
      
      <tr>
          <td style="padding:6px 0;font-size:var(--pdf-body);color:#666666">GST (10%)</td>
          <td style="padding:6px 0;font-size:var(--pdf-body);color:#111111;text-align:right">$100.00</td>
        </tr>
      <tr style="border-top:1px solid var(--pdf-border)">
        <td class="heading" style="padding:10px 0 6px;font-size:var(--pdf-total);font-weight:700;color:#111111">Total</td>
        <td class="heading" style="padding:10px 0 6px;font-size:var(--pdf-total);font-weight:700;color:#111111;text-align:right">$1,100.00</td>
      </tr>
      
    </table>
  </div>

  
  <div style="margin-top:24px">
        <p style="font-size:var(--pdf-section-label);font-weight:600;color:#666666;margin:0 0 8px;text-transform:uppercase;letter-spacing:0.05em;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif">Notes</p>
        <p style="font-size:var(--pdf-body);color:#666666;white-space:pre-line;line-height:1.6">Thank you for your business</p>
      </div>
</body>
</html>"
`;
